# Gun-Mayhem

./: .gitignore  CMakeLists.txt  CMakeLists_pybind.txt  PYTHON_BINDINGS_README.md  README.md  build_python_module.bat  evolvable_fuzzy_ai.py  feature_extraction.py  fuzzy_ai.py  ga_nn_trainer.py  ga_sequence_trainer.py  ga_trainer.py  main.cpp  marl_environment.py  marl_trainer.py  monitor_game.py  my_recording.json  neural_ai.py  neural_genome.py  out.txt  play_evolved_sequence.py  play_fuzzy_vs_nn.py  play_vs_ai.py  play_vs_evolved_ai.py  play_vs_evolved_nn.py  play_vs_marl_ai.py  record_gameplay.py  run.bat  sequence_genome.py  test.py  test2.py  test_headless.py  visualize_evolution.py
assets/: gameConfig.json
evolved_sequence/: best_genome.json
fuzzy/: __init__.py  evolvable_fuzzy_ai.py
ga/: __init__.py  fuzzy_genome.py  ga_nn_trainer.py  ga_trainer.py
include/: Bullet.hpp  CollisionHandler.hpp  Game.hpp  GameObject.hpp  GameState.hpp  GameStateMachine.hpp  InputHandler.hpp  MenuState.hpp  MovableObject.hpp  NonMovableObject.hpp  Pistol.hpp  Platform.hpp  PlayState.hpp  Player.hpp  RangedWeapon.hpp  TextureManager.hpp  Timer.hpp  Vector2D.hpp  Weapon.hpp  utils.hpp
nn/: __init__.py  neural_ai.py
play/: __init__.py  play_fuzzy_vs_nn.py  play_vs_ai.py  play_vs_evolved_ai.py  play_vs_evolved_nn.py
src/: Bullet.cpp  CollisionHandler.cpp  Game.cpp  GameObject.cpp  GameStateMachine.cpp  InputHandler.cpp  MenuState.cpp  MovableObject.cpp  NonMovableObject.cpp  Pistol.cpp  Platform.cpp  PlayState.cpp  Player.cpp  RangedWeapon.cpp  TextureManager.cpp  Timer.cpp  (+4 more)
(+30 files in other folders)
